--- a/res/values-bn/strings.xml
+++ b/res/values-bn/strings.xml
@@ -37,39 +37,24 @@
     <string name="media_size_8x10in" msgid="1872576638522812402">"৮x১০ ইঞ্চি"</string>
     <string name="media_size_4x6in" msgid="3093276425529958253">"৪x৬ ইঞ্চি"</string>
     <string name="printer_description" msgid="8580767673213837142">"%1$s – %2$s"</string>
-    <!-- no translation found for title_activity_add_printer (9119216095769228566) -->
-    <skip />
-    <!-- no translation found for add_printer_by_ip (562864787592910327) -->
-    <skip />
+    <string name="title_activity_add_printer" msgid="9119216095769228566">"প্রিন্টার যোগ করুন"</string>
+    <string name="add_printer_by_ip" msgid="562864787592910327">"IP অ্যাড্রেস দিয়ে প্রিন্টার যোগ করুন"</string>
     <string name="hostname_or_ip" msgid="3460546103553992915">"হোস্টনেম অথবা IP অ্যাড্রেস"</string>
     <string name="ip_hint" msgid="7939777481941979799">"192.168.0.4"</string>
     <string name="add" msgid="1950342261671100906">"যোগ করুন"</string>
-    <!-- no translation found for add_named (9074106244018070583) -->
-    <skip />
+    <string name="add_named" msgid="9074106244018070583">"<xliff:g id="PRINTER">%1$s</xliff:g> যোগ করুন"</string>
     <string name="no_printer_found" msgid="4777867380924351173">"এই অ্যাড্রেসে কোন প্রিন্টার নেই"</string>
     <string name="printer_not_supported" msgid="281955849350938408">"প্রিন্টারটি সমর্থিত নয়"</string>
-    <!-- no translation found for wifi_direct (4629404342852294985) -->
-    <skip />
-    <!-- no translation found for find_wifi_direct (5270504288829123954) -->
-    <skip />
-    <!-- no translation found for wifi_direct_printers (541168032444693191) -->
-    <skip />
-    <!-- no translation found for searching (2114018057619514587) -->
-    <skip />
-    <!-- no translation found for connect_hint_text (587112503851044234) -->
-    <skip />
-    <!-- no translation found for connecting_to (2665161014972086194) -->
-    <skip />
-    <!-- no translation found for failed_printer_connection (4196305972749960362) -->
-    <skip />
-    <!-- no translation found for failed_connection (8068661997318286575) -->
-    <skip />
-    <!-- no translation found for saved_printers (4567534965213125526) -->
-    <skip />
-    <!-- no translation found for forget (892068061425802502) -->
-    <skip />
-    <!-- no translation found for connects_via_wifi_direct (652300632780158437) -->
-    <skip />
-    <!-- no translation found for connects_via_network (5990041581556733898) -->
-    <skip />
+    <string name="wifi_direct" msgid="4629404342852294985">"ওয়াই-ফাই ডাইরেক্ট"</string>
+    <string name="find_wifi_direct" msgid="5270504288829123954">"ওয়াই-ফাই ডাইরেক্ট সমর্থিত প্রিন্টার খুঁজুন"</string>
+    <string name="wifi_direct_printers" msgid="541168032444693191">"ওয়াই-ফাই ডাইরেক্ট সমর্থিত প্রিন্টার"</string>
+    <string name="searching" msgid="2114018057619514587">"খোঁজা হচ্ছে…"</string>
+    <string name="connect_hint_text" msgid="587112503851044234">"প্রিন্টারের সামনের প্যানেলে এই সংযোগটি অনুমোদন করতে হবে"</string>
+    <string name="connecting_to" msgid="2665161014972086194">"<xliff:g id="PRINTER">%1$s</xliff:g> এর সাথে সংযুক্ত করা হচ্ছে"</string>
+    <string name="failed_printer_connection" msgid="4196305972749960362">"প্রিন্টারের সাথে সংযুক্ত করা যায়নি"</string>
+    <string name="failed_connection" msgid="8068661997318286575">"<xliff:g id="PRINTER">%1$s</xliff:g> এর সাথে সংযুক্ত করা যায়নি"</string>
+    <string name="saved_printers" msgid="4567534965213125526">"সেভ করা প্রিন্টার"</string>
+    <string name="forget" msgid="892068061425802502">"ভুলে যান"</string>
+    <string name="connects_via_wifi_direct" msgid="652300632780158437">"ওয়াই-ফাই ডাইরেক্টের মাধ্যমে সংযুক্ত হয়"</string>
+    <string name="connects_via_network" msgid="5990041581556733898">"বর্তমান নেটওয়ার্কের মাধ্যমে <xliff:g id="IP_ADDRESS">%1$s</xliff:g> অ্যাড্রেসে সংযুক্ত হয়"</string>
 </resources>
