--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -37,39 +37,24 @@
     <string name="media_size_8x10in" msgid="1872576638522812402">"8x10 इंच"</string>
     <string name="media_size_4x6in" msgid="3093276425529958253">"4x6 इंच"</string>
     <string name="printer_description" msgid="8580767673213837142">"%1$s – %2$s"</string>
-    <!-- no translation found for title_activity_add_printer (9119216095769228566) -->
-    <skip />
-    <!-- no translation found for add_printer_by_ip (562864787592910327) -->
-    <skip />
+    <string name="title_activity_add_printer" msgid="9119216095769228566">"प्रिंटर जोड़ें"</string>
+    <string name="add_printer_by_ip" msgid="562864787592910327">"आईपी पते का इस्तेमाल करके प्रिंटर जोड़ें"</string>
     <string name="hostname_or_ip" msgid="3460546103553992915">"होस्ट का नाम या आईपी पता"</string>
     <string name="ip_hint" msgid="7939777481941979799">"192.168.0.4"</string>
     <string name="add" msgid="1950342261671100906">"जोड़ें"</string>
-    <!-- no translation found for add_named (9074106244018070583) -->
-    <skip />
+    <string name="add_named" msgid="9074106244018070583">"<xliff:g id="PRINTER">%1$s</xliff:g> जोड़ें"</string>
     <string name="no_printer_found" msgid="4777867380924351173">"इस पते पर कोई प्रिंटर नहीं मिला"</string>
     <string name="printer_not_supported" msgid="281955849350938408">"प्रिंटर इस पर काम नहीं करता है"</string>
-    <!-- no translation found for wifi_direct (4629404342852294985) -->
-    <skip />
-    <!-- no translation found for find_wifi_direct (5270504288829123954) -->
-    <skip />
-    <!-- no translation found for wifi_direct_printers (541168032444693191) -->
-    <skip />
-    <!-- no translation found for searching (2114018057619514587) -->
-    <skip />
-    <!-- no translation found for connect_hint_text (587112503851044234) -->
-    <skip />
-    <!-- no translation found for connecting_to (2665161014972086194) -->
-    <skip />
-    <!-- no translation found for failed_printer_connection (4196305972749960362) -->
-    <skip />
-    <!-- no translation found for failed_connection (8068661997318286575) -->
-    <skip />
-    <!-- no translation found for saved_printers (4567534965213125526) -->
-    <skip />
-    <!-- no translation found for forget (892068061425802502) -->
-    <skip />
-    <!-- no translation found for connects_via_wifi_direct (652300632780158437) -->
-    <skip />
-    <!-- no translation found for connects_via_network (5990041581556733898) -->
-    <skip />
+    <string name="wifi_direct" msgid="4629404342852294985">"Wi-Fi Direct"</string>
+    <string name="find_wifi_direct" msgid="5270504288829123954">"Wi-Fi Direct प्रिंटर ढूंढें"</string>
+    <string name="wifi_direct_printers" msgid="541168032444693191">"Wi-Fi Direct प्रिंटर"</string>
+    <string name="searching" msgid="2114018057619514587">"खोज की जा रही है…"</string>
+    <string name="connect_hint_text" msgid="587112503851044234">"अपने प्रिंटर के सामने के पैनल पर आपको इस कनेक्शन के लिए मंज़ूरी देनी पड़ सकती है"</string>
+    <string name="connecting_to" msgid="2665161014972086194">"<xliff:g id="PRINTER">%1$s</xliff:g> से कनेक्ट किया जा रहा है"</string>
+    <string name="failed_printer_connection" msgid="4196305972749960362">"प्रिंटर से कनेक्ट नहीं हो सका"</string>
+    <string name="failed_connection" msgid="8068661997318286575">"<xliff:g id="PRINTER">%1$s</xliff:g> से कनेक्ट नहीं हो सका"</string>
+    <string name="saved_printers" msgid="4567534965213125526">"सेव किए गए प्रिंटर"</string>
+    <string name="forget" msgid="892068061425802502">"भूल जाएं"</string>
+    <string name="connects_via_wifi_direct" msgid="652300632780158437">"Wi-Fi Direct के ज़रिए कनेक्ट किया जाता है"</string>
+    <string name="connects_via_network" msgid="5990041581556733898">"<xliff:g id="IP_ADDRESS">%1$s</xliff:g> पर मौजूदा नेटवर्क के ज़रिए कनेक्ट किया जाता है"</string>
 </resources>
