--- a/res/values-km/strings.xml
+++ b/res/values-km/strings.xml
@@ -37,39 +37,24 @@
     <string name="media_size_8x10in" msgid="1872576638522812402">"8x10 អ៊ិន្ឈ៍"</string>
     <string name="media_size_4x6in" msgid="3093276425529958253">"4x6 អ៊ិន្ឈ៍"</string>
     <string name="printer_description" msgid="8580767673213837142">"%1$s – %2$s"</string>
-    <!-- no translation found for title_activity_add_printer (9119216095769228566) -->
-    <skip />
-    <!-- no translation found for add_printer_by_ip (562864787592910327) -->
-    <skip />
+    <string name="title_activity_add_printer" msgid="9119216095769228566">"បញ្ចូល​ម៉ាស៊ីន​បោះពុម្ព"</string>
+    <string name="add_printer_by_ip" msgid="562864787592910327">"បញ្ចូល​ម៉ាសីុនបោះពុម្ព​តាមអាសយដ្ឋាន​ IP"</string>
     <string name="hostname_or_ip" msgid="3460546103553992915">"ឈ្មោះម៉ាស៊ីន ឬអាសយដ្ឋាន IP"</string>
     <string name="ip_hint" msgid="7939777481941979799">"192.168.0.4"</string>
     <string name="add" msgid="1950342261671100906">"បញ្ចូល"</string>
-    <!-- no translation found for add_named (9074106244018070583) -->
-    <skip />
+    <string name="add_named" msgid="9074106244018070583">"បញ្ចូល <xliff:g id="PRINTER">%1$s</xliff:g>"</string>
     <string name="no_printer_found" msgid="4777867380924351173">"រកមិនឃើញ​ម៉ាស៊ីន​បោះពុម្ព​តាមរយៈ​អាសយដ្ឋាននេះ​ទេ"</string>
     <string name="printer_not_supported" msgid="281955849350938408">"មិនស្គាល់ម៉ាស៊ីនបោះពុម្ពទេ"</string>
-    <!-- no translation found for wifi_direct (4629404342852294985) -->
-    <skip />
-    <!-- no translation found for find_wifi_direct (5270504288829123954) -->
-    <skip />
-    <!-- no translation found for wifi_direct_printers (541168032444693191) -->
-    <skip />
-    <!-- no translation found for searching (2114018057619514587) -->
-    <skip />
-    <!-- no translation found for connect_hint_text (587112503851044234) -->
-    <skip />
-    <!-- no translation found for connecting_to (2665161014972086194) -->
-    <skip />
-    <!-- no translation found for failed_printer_connection (4196305972749960362) -->
-    <skip />
-    <!-- no translation found for failed_connection (8068661997318286575) -->
-    <skip />
-    <!-- no translation found for saved_printers (4567534965213125526) -->
-    <skip />
-    <!-- no translation found for forget (892068061425802502) -->
-    <skip />
-    <!-- no translation found for connects_via_wifi_direct (652300632780158437) -->
-    <skip />
-    <!-- no translation found for connects_via_network (5990041581556733898) -->
-    <skip />
+    <string name="wifi_direct" msgid="4629404342852294985">"តាម Wi-Fi ផ្ទាល់"</string>
+    <string name="find_wifi_direct" msgid="5270504288829123954">"ស្វែងរក​ម៉ាសីុនបោះពុម្ព​តាម Wi-Fi ផ្ទាល់"</string>
+    <string name="wifi_direct_printers" msgid="541168032444693191">"ម៉ាសីុនបោះពុម្ព​តាម Wi-Fi ផ្ទាល់"</string>
+    <string name="searching" msgid="2114018057619514587">"កំពុងស្វែង​រក…"</string>
+    <string name="connect_hint_text" msgid="587112503851044234">"អ្នកប្រហែល​ជា​ចាំបាច់ត្រូវ​យល់ព្រម​លើការភ្ជាប់នេះ​នៅលើ​ផ្ទាំងខាងមុខ​នៃម៉ាសីុន​បោះពុម្ព​របស់អ្នក"</string>
+    <string name="connecting_to" msgid="2665161014972086194">"កំពុងភ្ជាប់​ជាមួយ <xliff:g id="PRINTER">%1$s</xliff:g>"</string>
+    <string name="failed_printer_connection" msgid="4196305972749960362">"មិនអាច​ភ្ជាប់ជាមួយ​ម៉ាសីុនបោះពុម្ព​បាន​ទេ"</string>
+    <string name="failed_connection" msgid="8068661997318286575">"មិន​អាចភ្ជាប់​ជាមួយ <xliff:g id="PRINTER">%1$s</xliff:g> បាន​ទេ"</string>
+    <string name="saved_printers" msgid="4567534965213125526">"ម៉ាសីុនបោះពុម្ព​ដែលបានរក្សាទុក"</string>
+    <string name="forget" msgid="892068061425802502">"បំភ្លេច"</string>
+    <string name="connects_via_wifi_direct" msgid="652300632780158437">"ភ្ជាប់​តាមរយៈ Wi-Fi​ ផ្ទាល់"</string>
+    <string name="connects_via_network" msgid="5990041581556733898">"ភ្ជាប់​តាមរយៈ​បណ្តាញបច្ចុប្បន្ន​នៅ <xliff:g id="IP_ADDRESS">%1$s</xliff:g>"</string>
 </resources>
