--- a/res/values-lv/strings.xml
+++ b/res/values-lv/strings.xml
@@ -37,39 +37,24 @@
     <string name="media_size_8x10in" msgid="1872576638522812402">"8 x 10 collas"</string>
     <string name="media_size_4x6in" msgid="3093276425529958253">"4 x 6 collas"</string>
     <string name="printer_description" msgid="8580767673213837142">"%1$s — %2$s"</string>
-    <!-- no translation found for title_activity_add_printer (9119216095769228566) -->
-    <skip />
-    <!-- no translation found for add_printer_by_ip (562864787592910327) -->
-    <skip />
+    <string name="title_activity_add_printer" msgid="9119216095769228566">"Pievienot printeri"</string>
+    <string name="add_printer_by_ip" msgid="562864787592910327">"Pievienot printeri pēc IP adreses"</string>
     <string name="hostname_or_ip" msgid="3460546103553992915">"Saimniekdatora nosaukums vai IP adrese"</string>
     <string name="ip_hint" msgid="7939777481941979799">"192.168.0.4"</string>
     <string name="add" msgid="1950342261671100906">"Pievienot"</string>
-    <!-- no translation found for add_named (9074106244018070583) -->
-    <skip />
+    <string name="add_named" msgid="9074106244018070583">"Pievienot printeri <xliff:g id="PRINTER">%1$s</xliff:g>"</string>
     <string name="no_printer_found" msgid="4777867380924351173">"Šajā adresē netika atrasts neviens printeris."</string>
     <string name="printer_not_supported" msgid="281955849350938408">"Printeris netiek atbalstīts"</string>
-    <!-- no translation found for wifi_direct (4629404342852294985) -->
-    <skip />
-    <!-- no translation found for find_wifi_direct (5270504288829123954) -->
-    <skip />
-    <!-- no translation found for wifi_direct_printers (541168032444693191) -->
-    <skip />
-    <!-- no translation found for searching (2114018057619514587) -->
-    <skip />
-    <!-- no translation found for connect_hint_text (587112503851044234) -->
-    <skip />
-    <!-- no translation found for connecting_to (2665161014972086194) -->
-    <skip />
-    <!-- no translation found for failed_printer_connection (4196305972749960362) -->
-    <skip />
-    <!-- no translation found for failed_connection (8068661997318286575) -->
-    <skip />
-    <!-- no translation found for saved_printers (4567534965213125526) -->
-    <skip />
-    <!-- no translation found for forget (892068061425802502) -->
-    <skip />
-    <!-- no translation found for connects_via_wifi_direct (652300632780158437) -->
-    <skip />
-    <!-- no translation found for connects_via_network (5990041581556733898) -->
-    <skip />
+    <string name="wifi_direct" msgid="4629404342852294985">"Wi-Fi Direct"</string>
+    <string name="find_wifi_direct" msgid="5270504288829123954">"Atrast Wi-Fi Direct printerus"</string>
+    <string name="wifi_direct_printers" msgid="541168032444693191">"Wi-Fi Direct printeri"</string>
+    <string name="searching" msgid="2114018057619514587">"Notiek meklēšana…"</string>
+    <string name="connect_hint_text" msgid="587112503851044234">"Iespējams, jums būs jāapstiprina savienojuma izveide printera priekšējā panelī."</string>
+    <string name="connecting_to" msgid="2665161014972086194">"Notiek savienojuma izveide ar printeri <xliff:g id="PRINTER">%1$s</xliff:g>"</string>
+    <string name="failed_printer_connection" msgid="4196305972749960362">"Nevarēja izveidot savienojumu ar printeri"</string>
+    <string name="failed_connection" msgid="8068661997318286575">"Nevarēja izveidot savienojumu ar printeri <xliff:g id="PRINTER">%1$s</xliff:g>"</string>
+    <string name="saved_printers" msgid="4567534965213125526">"Saglabātie printeri"</string>
+    <string name="forget" msgid="892068061425802502">"Aizmirst"</string>
+    <string name="connects_via_wifi_direct" msgid="652300632780158437">"Notiek savienojuma izveide, izmantojot Wi-Fi Direct"</string>
+    <string name="connects_via_network" msgid="5990041581556733898">"Notiek savienojuma izveide, izmantojot pašreizējo tīklu ar šādu IP adresi: <xliff:g id="IP_ADDRESS">%1$s</xliff:g>"</string>
 </resources>
