--- a/res/values-ml/strings.xml
+++ b/res/values-ml/strings.xml
@@ -37,39 +37,24 @@
     <string name="media_size_8x10in" msgid="1872576638522812402">"8x10 ഇഞ്ച്"</string>
     <string name="media_size_4x6in" msgid="3093276425529958253">"4x6 ഇഞ്ച്"</string>
     <string name="printer_description" msgid="8580767673213837142">"%1$s – %2$s"</string>
-    <!-- no translation found for title_activity_add_printer (9119216095769228566) -->
-    <skip />
-    <!-- no translation found for add_printer_by_ip (562864787592910327) -->
-    <skip />
+    <string name="title_activity_add_printer" msgid="9119216095769228566">"പ്രിന്‍റർ ചേർക്കുക"</string>
+    <string name="add_printer_by_ip" msgid="562864787592910327">"IP വിലാസം ഉപയോഗിച്ച് പ്രിന്‍റർ ചേർക്കുക"</string>
     <string name="hostname_or_ip" msgid="3460546103553992915">"ഹോസ്‌റ്റുനാമം അല്ലെങ്കിൽ IP വിലാസം"</string>
     <string name="ip_hint" msgid="7939777481941979799">"192.168.0.4"</string>
     <string name="add" msgid="1950342261671100906">"ചേർക്കുക"</string>
-    <!-- no translation found for add_named (9074106244018070583) -->
-    <skip />
+    <string name="add_named" msgid="9074106244018070583">"<xliff:g id="PRINTER">%1$s</xliff:g> ചേർക്കുക"</string>
     <string name="no_printer_found" msgid="4777867380924351173">"ഈ വിലാസത്തിൽ ‌പ്രിന്റർ ഒന്നും കണ്ടെത്തിയില്ല"</string>
     <string name="printer_not_supported" msgid="281955849350938408">"പ്രിന്ററിന് പിന്തുണയില്ല"</string>
-    <!-- no translation found for wifi_direct (4629404342852294985) -->
-    <skip />
-    <!-- no translation found for find_wifi_direct (5270504288829123954) -->
-    <skip />
-    <!-- no translation found for wifi_direct_printers (541168032444693191) -->
-    <skip />
-    <!-- no translation found for searching (2114018057619514587) -->
-    <skip />
-    <!-- no translation found for connect_hint_text (587112503851044234) -->
-    <skip />
-    <!-- no translation found for connecting_to (2665161014972086194) -->
-    <skip />
-    <!-- no translation found for failed_printer_connection (4196305972749960362) -->
-    <skip />
-    <!-- no translation found for failed_connection (8068661997318286575) -->
-    <skip />
-    <!-- no translation found for saved_printers (4567534965213125526) -->
-    <skip />
-    <!-- no translation found for forget (892068061425802502) -->
-    <skip />
-    <!-- no translation found for connects_via_wifi_direct (652300632780158437) -->
-    <skip />
-    <!-- no translation found for connects_via_network (5990041581556733898) -->
-    <skip />
+    <string name="wifi_direct" msgid="4629404342852294985">"വൈഫൈ ഡയറക്‌ട്"</string>
+    <string name="find_wifi_direct" msgid="5270504288829123954">"വൈഫൈ ഡയറക്‌റ്റ് പ്രിന്‍ററുകൾ കണ്ടെത്തുക"</string>
+    <string name="wifi_direct_printers" msgid="541168032444693191">"വൈഫൈ ഡയറക്‌ട് പ്രിന്‍ററുകൾ"</string>
+    <string name="searching" msgid="2114018057619514587">"തിരയുന്നു..."</string>
+    <string name="connect_hint_text" msgid="587112503851044234">"പ്രിന്‍ററിന്‍റെ മുൻഭാഗത്തെ പാനലിൽ ഈ കണക്ഷന് അനുമതി നൽകേണ്ടതായി വന്നേക്കാം"</string>
+    <string name="connecting_to" msgid="2665161014972086194">"<xliff:g id="PRINTER">%1$s</xliff:g> പ്രിന്‍ററിലേക്ക് കണക്റ്റ് ചെയ്യുന്നു"</string>
+    <string name="failed_printer_connection" msgid="4196305972749960362">"പ്രിന്‍ററിലേക്ക് കണക്‌റ്റ് ചെയ്യാനായില്ല"</string>
+    <string name="failed_connection" msgid="8068661997318286575">"<xliff:g id="PRINTER">%1$s</xliff:g> പ്രിന്‍ററിലേക്ക് കണക്‌റ്റ് ചെയ്യാനായില്ല"</string>
+    <string name="saved_printers" msgid="4567534965213125526">"സംരക്ഷിച്ച പ്രിന്‍ററുകൾ"</string>
+    <string name="forget" msgid="892068061425802502">"മറന്നു"</string>
+    <string name="connects_via_wifi_direct" msgid="652300632780158437">"വൈഫൈ ഡയറക്‌റ്റ് വഴി കണക്റ്റ് ചെയ്യുന്നു"</string>
+    <string name="connects_via_network" msgid="5990041581556733898">"<xliff:g id="IP_ADDRESS">%1$s</xliff:g> വിലാസത്തിലെ നിലവിലെ നെറ്റ്‍വര്‍ക്ക് വഴി കണക്റ്റ് ചെയ്യുന്നു"</string>
 </resources>
