--- a/res/values-ms/strings.xml
+++ b/res/values-ms/strings.xml
@@ -37,39 +37,24 @@
     <string name="media_size_8x10in" msgid="1872576638522812402">"8x10 in"</string>
     <string name="media_size_4x6in" msgid="3093276425529958253">"4x6 in"</string>
     <string name="printer_description" msgid="8580767673213837142">"%1$s – %2$s"</string>
-    <!-- no translation found for title_activity_add_printer (9119216095769228566) -->
-    <skip />
-    <!-- no translation found for add_printer_by_ip (562864787592910327) -->
-    <skip />
+    <string name="title_activity_add_printer" msgid="9119216095769228566">"Tambah pencetak"</string>
+    <string name="add_printer_by_ip" msgid="562864787592910327">"Tambah pencetak melalui alamat IP"</string>
     <string name="hostname_or_ip" msgid="3460546103553992915">"Nama hos atau alamat IP"</string>
     <string name="ip_hint" msgid="7939777481941979799">"192.168.0.4"</string>
     <string name="add" msgid="1950342261671100906">"Tambah"</string>
-    <!-- no translation found for add_named (9074106244018070583) -->
-    <skip />
+    <string name="add_named" msgid="9074106244018070583">"Tambah <xliff:g id="PRINTER">%1$s</xliff:g>"</string>
     <string name="no_printer_found" msgid="4777867380924351173">"Tiada pencetak yang ditemui di alamat ini"</string>
     <string name="printer_not_supported" msgid="281955849350938408">"Pencetak tidak disokong"</string>
-    <!-- no translation found for wifi_direct (4629404342852294985) -->
-    <skip />
-    <!-- no translation found for find_wifi_direct (5270504288829123954) -->
-    <skip />
-    <!-- no translation found for wifi_direct_printers (541168032444693191) -->
-    <skip />
-    <!-- no translation found for searching (2114018057619514587) -->
-    <skip />
-    <!-- no translation found for connect_hint_text (587112503851044234) -->
-    <skip />
-    <!-- no translation found for connecting_to (2665161014972086194) -->
-    <skip />
-    <!-- no translation found for failed_printer_connection (4196305972749960362) -->
-    <skip />
-    <!-- no translation found for failed_connection (8068661997318286575) -->
-    <skip />
-    <!-- no translation found for saved_printers (4567534965213125526) -->
-    <skip />
-    <!-- no translation found for forget (892068061425802502) -->
-    <skip />
-    <!-- no translation found for connects_via_wifi_direct (652300632780158437) -->
-    <skip />
-    <!-- no translation found for connects_via_network (5990041581556733898) -->
-    <skip />
+    <string name="wifi_direct" msgid="4629404342852294985">"Wi-Fi Langsung"</string>
+    <string name="find_wifi_direct" msgid="5270504288829123954">"Cari pencetak Wi-Fi Langsung"</string>
+    <string name="wifi_direct_printers" msgid="541168032444693191">"Pencetak Wi-Fi Langsung"</string>
+    <string name="searching" msgid="2114018057619514587">"Mencari…"</string>
+    <string name="connect_hint_text" msgid="587112503851044234">"Anda mungkin perlu meluluskan sambungan ini pada panel hadapan pencetak anda"</string>
+    <string name="connecting_to" msgid="2665161014972086194">"Menyambung ke <xliff:g id="PRINTER">%1$s</xliff:g>"</string>
+    <string name="failed_printer_connection" msgid="4196305972749960362">"Tidak dapat menyambung ke pencetak"</string>
+    <string name="failed_connection" msgid="8068661997318286575">"Tidak dapat menyambung ke <xliff:g id="PRINTER">%1$s</xliff:g>"</string>
+    <string name="saved_printers" msgid="4567534965213125526">"Pencetak disimpan"</string>
+    <string name="forget" msgid="892068061425802502">"Lupakan"</string>
+    <string name="connects_via_wifi_direct" msgid="652300632780158437">"Bersambung melalui Wi-Fi Langsung"</string>
+    <string name="connects_via_network" msgid="5990041581556733898">"Bersambung melalui rangkaian semasa di <xliff:g id="IP_ADDRESS">%1$s</xliff:g>"</string>
 </resources>
